--- a/tests/_data/templates/attr.latte
+++ b/tests/_data/templates/attr.latte
@@ -1,3 +1,1 @@
-<a n:img="'namespace/namespace/namespace/test.png', '250x150', 'fill'">
-    <img n:img="'namespace/namespace/namespace/test.png', '250x150', 'fill'">
-</a>
+<img n:img="'test.png', '250x150', 'exact', 'noimage.png'">
